syntax = "proto3";

package comdex.cdp.v1alpha1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "comdex/cdp/v1alpha1/cdp.proto";
import "comdex/cdp/v1alpha1/params.proto";

option go_package = "github.com/comdex-official/comdex/x/cdp/types";

// GenesisState defines the cdp module's genesis state.
message GenesisState {
    repeated Params params  = 1 [
      (gogoproto.moretags) = "yaml:\"params\"",
      (gogoproto.nullable) = false
    ];

    repeated CDP cdps = 2 [
      (gogoproto.moretags) = "yaml:\"cdps\"",
      (gogoproto.nullable) = false
    ];

    repeated Deposit deposits = 3 [
      (gogoproto.moretags) = "yaml:\"deposits\"",
      (gogoproto.nullable) = false
    ];

    uint64 starting_cdp_id = 4;
    string debt_denom = 5 [ (gogoproto.moretags) = "yaml:\"debt_denom\"" ];
    string gov_denom = 6 [ (gogoproto.moretags) = "yaml:\"gov_denom\"" ];
    repeated GenesisAccumulationTime previous_accumulation_times =7;
    repeated GenesisTotalPrincipal total_principals =8;

}

message GenesisAccumulationTime{
  string collateral_type = 1 [ (gogoproto.moretags) = "yaml:\"collateral_type\"" ];

  google.protobuf.Timestamp previous_accumulation_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"previous_accumulation_time\""
  ];

  string interest_factor = 3 [
    (gogoproto.moretags) = "yaml:\"interest_factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message GenesisTotalPrincipal{
  string collateral_type = 1 [ (gogoproto.moretags) = "yaml:\"collateral_type\"" ];
  int64 total_principal = 2 [ (gogoproto.moretags) = "yaml:\"total_principal\"" ];
}