syntax = "proto3";

package comdex.cdp.v1alpha1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/cdp/types";


message Params {
  repeated CollateralParam collateral_params = 1[
    (gogoproto.moretags) = "yaml:\"collateral_params\"",
    (gogoproto.nullable) = false
  ];

  DebtParam debt_param = 2[
    (gogoproto.moretags) = "yaml:\"debt_param\"",
    (gogoproto.nullable) = false
  ];

}


message CollateralParam{
  string denom =1;
  string type = 2;
  string liquidation_ratio = 3 [
    (gogoproto.moretags) = "yaml:\"liquidation_ratio\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message DebtParam{
  string denom = 1 [
    (gogoproto.moretags) = "yaml:\"denom\""
  ];

  string reference_asset = 2 [
    (gogoproto.moretags) = "yaml:\"reference_asset\""
  ];

  int64 conversion_factor = 3 [
    (gogoproto.moretags) = "yaml:\"conversion_factor\""
  ];

}