syntax = "proto3";

package comdex.cdp.v1alpha1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/cdp/types";

// Msg defines the Msg service.
service Msg {

  rpc CreateCDP(MsgCreateCDP) returns (MsgCreateCDPResponse);

  rpc Deposit(MsgDeposit) returns (MsgDepositResponse);

  rpc Withdraw(MsgWithdraw) returns (MsgWithdrawResponse);

  rpc DrawDebt(MsgDrawDebt) returns (MsgDrawDebtResponse);

  rpc RepayDebt(MsgRepayDebt) returns (MsgRepayDebtResponse);

  rpc Liquidate(MsgLiquidate) returns (MsgLiquidateResponse);


}

message MsgCreateCDP{
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  cosmos.base.v1beta1.Coin collateral = 2 [
    (gogoproto.moretags) = "yaml:\"collateral\"",
    (gogoproto.nullable) = false
  ];

  cosmos.base.v1beta1.Coin principal = 3 [
    (gogoproto.moretags) = "yaml:\"principal\"",
    (gogoproto.nullable) = false
  ];

  string collateralType = 4 [ (gogoproto.moretags) = "yaml:\"collateralType\"" ];

}

message MsgCreateCDPResponse{}

message MsgDeposit{
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  cosmos.base.v1beta1.Coin collateral = 2 [
    (gogoproto.moretags) = "yaml:\"collateral\"",
    (gogoproto.nullable) = false
  ];

  string collateralType = 3 [ (gogoproto.moretags) = "yaml:\"collateralType\"" ];

}

message MsgDepositResponse{}


message MsgWithdraw{
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  cosmos.base.v1beta1.Coin collateral = 2 [
    (gogoproto.moretags) = "yaml:\"collateral\"",
    (gogoproto.nullable) = false
  ];

  string collateral_type = 3 [ (gogoproto.moretags) = "yaml:\"collateral_type\"" ];

}

message MsgWithdrawResponse{}

message MsgDrawDebt{
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  string collateral_type = 2 [ (gogoproto.moretags) = "yaml:\"collateral_type\"" ];
  cosmos.base.v1beta1.Coin principal = 3 [
    (gogoproto.moretags) = "yaml:\"principal\"",
    (gogoproto.nullable) = false
  ];
}

message MsgDrawDebtResponse{}

message MsgRepayDebt{
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  string collateral_type = 2 [ (gogoproto.moretags) = "yaml:\"collateral_type\"" ];
  cosmos.base.v1beta1.Coin payment = 3 [
    (gogoproto.moretags) = "yaml:\"payment\"",
    (gogoproto.nullable) = false
  ];
}

message MsgRepayDebtResponse{}


message MsgLiquidate{
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  string collateral_type = 2 [ (gogoproto.moretags) = "yaml:\"collateral_type\"" ];
}

message MsgLiquidateResponse{}